# codeforces

./: .gitignore  README.md  setup.sh
cpp/: 1A.cpp
cpp/xc/: hello
scripts/: install.sh  pyproject.toml
scripts/scripts/builder/: app.py  builder.py  common.py  langspecs.py
scripts/scripts/common/: filepath.py
