[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["k2nt <khai.tnguyen@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.7.0"
pyinstaller = {version = "^6.3.0", python = "3.11"}

[tool.poetry.scripts]
builder = "scripts.builder.builder:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
